--- a/FLORES.html
+++ b/FLORES.html
@@ -10,8 +10,11 @@
 </head>
 
 <body class="container">
-    <audio controls>
+    <audio controls autoplay loop>
         <source src="img/Floricienta.mp3" type="audio/mpeg">
+        
+        Error
+
     </audio>
     <div class="night"></div>
     <div class="flowers">
