--- a/FLORES.html
+++ b/FLORES.html
@@ -10,6 +10,10 @@
 </head>
 
 <body class="container">
+    <audio autoplay loop hidden>
+        <source src="img/Floricienta.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
     <div class="night"></div>
     <div class="flowers">
       <div class="flower flower--1">
